http-https-echo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-https-echo
  labels:
    app: http-https-echo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http-https-echo
  template:
    metadata:
      labels:
        app: http-https-echo
    spec:
      containers:
      - name: http-https-echo
        image: mendhak/http-https-echo:31
        ports:
        - containerPort: 8080
        - containerPort: 8443
