http-https-echo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-https-echo-svc
spec:
  type: ClusterIP
  selector:
    app: http-https-echo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
